# autotools-unittest

./: .gitignore  COPYING  Doxyfile.in  Makefile.am  Makefile.am.checkstyle  Makefile.am.coverage  Makefile.am.doxygen  README  README.md  autotools-unittest.pc.in  configure.ac
lib/: Makefile.am
lib/gmock/: Makefile.am
lib/gmock-1.6.0/: Makefile.am
lib/gtest-1.6.0/: Makefile.am
m4/: ac_doxygen.m4  ax_coverage.m4
scripts/: Makefile.am  change_package_name.sh
src/: Makefile.am
src/autotools-unittest/: Makefile.am  sample.cpp  sample.h  sample.hpp
test/: Makefile.am  sample_test.cpp  sample_with_mock_test.cpp
test/autotools-unittest/: Makefile.am  sample_test.cpp
